{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 90,
  "lineage": "e5ffb93c-fa6d-addb-cb52-2b12588bb168",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b8b44ec9a8f90422",
            "arn": "arn:aws:ec2:us-east-2:654654403924:instance/i-03d1fd7baee879036",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "temperature-s3-mybucket-role",
            "id": "i-03d1fd7baee879036",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "temperature",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0967b5f54c15bb637",
            "private_dns": "ip-10-0-3-129.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.129",
            "public_dns": "ec2-3-22-217-249.us-east-2.compute.amazonaws.com",
            "public_ip": "3.22.217.249",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-014b21c89caffe4e7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0936264dd52f9bbfb",
            "tags": {
              "Environment": "Dev",
              "Name": "database-instance"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "database-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07da0ee34380163ca"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.temperature-s3-mybucket-role-instanceprofile",
            "aws_iam_role.s3-mybucket-role",
            "aws_security_group.example-instance",
            "aws_subnet.main-public-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:654654403924:internet-gateway/igw-035cac59db00fbe0d",
            "id": "igw-035cac59db00fbe0d",
            "owner_id": "654654403924",
            "tags": {
              "Name": "temperature-vpc"
            },
            "tags_all": {
              "Name": "temperature-vpc"
            },
            "vpc_id": "vpc-01aa4621c276f9704"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:654654403924:route-table/rtb-03c02e1253d2d4a94",
            "id": "rtb-03c02e1253d2d4a94",
            "owner_id": "654654403924",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-035cac59db00fbe0d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "temperature-public-route-1"
            },
            "tags_all": {
              "Name": "temperature-public-route-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-01aa4621c276f9704"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-1-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-098efcde2ca2bad2c",
            "route_table_id": "rtb-03c02e1253d2d4a94",
            "subnet_id": "subnet-0936264dd52f9bbfb"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.main-public",
            "aws_subnet.main-public-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "example-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:654654403924:security-group/sg-07da0ee34380163ca",
            "description": "security group that allows ssh and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07da0ee34380163ca",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh",
            "name_prefix": "",
            "owner_id": "654654403924",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "temperature-instance"
            },
            "tags_all": {
              "Name": "temperature-instance"
            },
            "timeouts": null,
            "vpc_id": "vpc-01aa4621c276f9704"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:654654403924:subnet/subnet-0a5347bdd592a8044",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a5347bdd592a8044",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654403924",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "temperature-private-1"
            },
            "tags_all": {
              "Name": "temperature-private-1"
            },
            "vpc_id": "vpc-01aa4621c276f9704"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:654654403924:subnet/subnet-0936264dd52f9bbfb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0936264dd52f9bbfb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "654654403924",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "temperature-public-1"
            },
            "tags_all": {
              "Name": "temperature-public-1"
            },
            "vpc_id": "vpc-01aa4621c276f9704"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:654654403924:vpc/vpc-01aa4621c276f9704",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09644384e4c098bbb",
            "default_route_table_id": "rtb-07310a32c3f11551d",
            "default_security_group_id": "sg-006143d0b7a0451f2",
            "dhcp_options_id": "dopt-02ff149e82127c284",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01aa4621c276f9704",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07310a32c3f11551d",
            "owner_id": "654654403924",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}